--- a/app/views/order_mailer/elsewhere.text.html.erb
+++ b/app/views/order_mailer/elsewhere.text.html.erb
@@ -1,2 +1,2 @@
 <p>A new order has been raised on the system that needs placing:</p>
-<p><a href="http://orders.fimexltd.com/orders/<%= @order.id %>"><%= @order.reference %></a></p>
+<p><a href="http://iteks.x64.me/orders/<%= @order.id %>"><%= @order.reference %></a></p>
