--- a/app/views/size_mailer/caroline.text.html.erb
+++ b/app/views/size_mailer/caroline.text.html.erb
@@ -1,2 +1,2 @@
 <p>A new size chart has been added on the system:</p>
-<p><a href="http://orders.fimexltd.com/size_charts/<%= @size_chart.id %>"><%= @size_chart.reference %></a></p>
+<p><a href="http://http://iteks.x64.me/<%= @size_chart.id %>"><%= @size_chart.reference %></a></p>
