--- a/app/views/status_mailer/factory.text.html.erb
+++ b/app/views/status_mailer/factory.text.html.erb
@@ -1,4 +1,4 @@
-<p>Order <a href="http://orders.fimexltd.com/orders/<%= @order.id %>"><%= @order.reference %></a> has been placed by <%= @user.name %>:</p>
+<p>Order <a href="http://http://iteks.x64.me/orders/<%= @order.id %>"><%= @order.reference %></a> has been placed by <%= @user.name %>:</p>
 <table>
   <tbody>
     <tr>
