--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en">
 <head>
-  <title><%= yield(:title) || "Fimex Order System" %></title>
-  <link rel="stylesheet" href="/stylesheets/fimex.css" type="text/css" />
+  <title><%= yield(:title) || "Iteks Order System" %></title>
+  <link rel="stylesheet" href="/stylesheets/iteks.css" type="text/css" />
 </head>
 <body>
   <div id="navigation">
