--- a/app/views/sample_mailer/mail.text.html.erb
+++ b/app/views/sample_mailer/mail.text.html.erb
@@ -1,2 +1,2 @@
 <p>A new sample has been raised on the system and needs making:</p>
-<p><a href="http://http://iteks.x64.me/samples/<%= @sample.id %>"><%= @sample.reference %></a></p>
+<p><a href="http://iteks.x64.me/samples/<%= @sample.id %>"><%= @sample.reference %></a></p>
