--- a/app/views/sample_mailer/price.text.html.erb
+++ b/app/views/sample_mailer/price.text.html.erb
@@ -1,2 +1,2 @@
 <p>A new sample price has been added on the system:</p>
-<p><a href="http://http://iteks.x64.me/samples/<%= @sample.id %>"><%= @sample.reference %></a></p>
+<p><a href="http://iteks.x64.me/samples/<%= @sample.id %>"><%= @sample.reference %></a></p>
