--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -81,7 +81,7 @@
 <% end %>
 
 <div id="pane">
-<% if @current_user.id = "3" || @current_user.id = "2" %>
+<% if @current_user.id == 3 || @current_user.id == 2 %>
 	<table class="tablesorter">
 		<thead>
 		<tr>
