--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -41,7 +41,7 @@
       <%= f.check_box(:fob) %> <%= f.label(:fob, 'FOB Order') %><br />
     </p>
     <p>
-      <%= f.check_box(:ddp) %> <%= f.label(:ddp, 'DDP Order') %><br />
+      <%= f.check_box(:ddp) %> <%= f.label(:ddp, 'FOB CC Order') %><br />
     </p>
     <p>
       <%= f.label(:company_id, "Company") %> and <%= f.label(:user_id, "Merchandiser") %><br />
