--- a/app/views/factories/edit.html.erb
+++ b/app/views/factories/edit.html.erb
@@ -34,6 +34,10 @@
       <%= f.label(:country_id) %><br />
       <%= f.select(:country_id, @countries.map {|d| [ d.name, d.id ] }) %>
     </p>
+    <p>
+			<%= f.label(:subscript) %> (used for ordering)<br />
+			<%= f.text_field(:subscript, :size => 2) %>
+		</p>
   	<p>
   		<%= f.label(:telephone) %><br />
   		<%= f.text_field(:telephone, :size => 20) %>
