--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -31,6 +31,8 @@
         <% if @current_user.buying_price? %>
         <option value="placed_on">Placed</option>
 				<option value="unplaced">Unplaced</option>
+				<option value="invoiced">Invoiced</option>
+				<option value="part_invoiced">Part Invoiced</option>
 				<option value="set_target_price">Set Target Price</option>
         <% end %>
         <option value="quality_control">Quality Control Recieved</option>
