add profit report 2014

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -17,6 +17,7 @@
 		<li><a href='/reports/customer_financials.pdf'>Customer Financials</a></li>
 		<li><a href='/reports/factory_financials.pdf'>Factory Financials</a></li>
 		<li><a href='/reports/profit_percents_2013.pdf'>Profit Report 2013</a></li>
+		<li><a href='/reports/profit_percents_2014.pdf'>Profit Report 2014</a></li>
 	</ul>
 <% end %>
 </ul>
