add kemal to report and edit weight for packs

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -351,7 +351,7 @@
 		<table class="tabular">
 		  <thead>
 			<tr>
-				<th>Weight</th>
+				<th>Sock Weight</th>
 				<th>Fibre Composition</th>
 			</tr>
 			</thead>
