--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -9,7 +9,7 @@
 	<li><a href='/reports/no_buy_sell.pdf'>No Buying/Selling Price</a></li>
 </ul>
 
-<% if @current_user.admin? %>
+<% if @current_user.admin? || @current_user.id == 19 %>
 	<h2>Reports - Admin Only</h2>
 	<ul>
 		<li><a href='/reports/total_current_order_financials.pdf'>Total Current Order Financials</a></li>
