--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -191,6 +191,9 @@
 		<th>FOB</th>
 		<th>FOB CC</th>
 		<th>Shipping Info</th>
+		<% if @current_user.selling_price? && @current_user.buying_price? %>
+			<th>Est Total Profit</th>
+		<% end %>
 	</tr>
 	</thead>
 	<tbody>
@@ -198,6 +201,9 @@
 		<td><%= @order.fob? ? "Yes" : "No" %></td>
 		<td><%= @order.ddp? ? "Yes" : "No" %></td>
 		<td><%=na @order.country.shipping_method %></td>
+		<% if @current_user.selling_price? && @current_user.buying_price? %>
+			<td>£<%= @order.total_profit_gbp.round(2) unless !@order.total_profit_gbp %></td>
+		<% end %>
 	</tr>
 	</tbody>
 </table>
@@ -401,7 +407,7 @@
 				<% if pack.currency != "£" %>
 				  <th>Exchange Rate</th>
 				<% end %>
-				<% if @current_user.selling_price? %>
+				<% if @current_user.selling_price? && @current_user.buying_price? %>
 					<th>Est Profit</th>
 				<% end %>
 		    </tr>
@@ -413,8 +419,8 @@
 				<% if pack.currency != "£" %>
 				  <td><%= pack.exchange_rate %></td>
 				<% end %>
-				<% if @current_user.selling_price? %>
-					<td><%= pack.estimated_profit.round(2) unless !pack.estimated_profit %> % (£<%= pack.profit_gbp %>) including duty, transport cost to UK and to customer estimated at £<%= pack.estimated_transport_cost %></td>
+				<% if @current_user.selling_price? && @current_user.buying_price? %>
+					<td><%= pack.estimated_profit.round(2) unless !pack.estimated_profit %> % (£<%= pack.profit_gbp.round(2) unless !pack.profit_gbp %>) including duty, transport cost to UK and to customer estimated at £<%= pack.estimated_transport_cost %></td>
 				<% end %>
 			</tr>
 		</table>	
