--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -13,9 +13,12 @@
 	<h2>Reports - Admin Only</h2>
 	<ul>
 		<li><a href='/reports/total_current_order_financials.pdf'>Total Current Order Financials</a></li>
-		<li><a href='/reports/country_financials.pdf'>Country Financials</a></li>
-		<li><a href='/reports/customer_financials.pdf'>Customer Financials</a></li>
-		<li><a href='/reports/factory_financials.pdf'>Factory Financials</a></li>
+		<li><a href='/reports/country_financials_2013.pdf'>Country Financials 2013</a></li>
+		<li><a href='/reports/country_financials_2014.pdf'>Country Financials 2014</a></li>
+		<li><a href='/reports/customer_financials_2013.pdf'>Customer Financials 2013</a></li>
+		<li><a href='/reports/customer_financials_2014.pdf'>Customer Financials 2014</a></li>
+		<li><a href='/reports/factory_financials_2013.pdf'>Factory Financials 2013</a></li>
+		<li><a href='/reports/factory_financials_2014.pdf'>Factory Financials 2014</a></li>
 		<li><a href='/reports/profit_percents_2013.pdf'>Profit Report 2013</a></li>
 		<li><a href='/reports/profit_percents_2014.pdf'>Profit Report 2014</a></li>
 	</ul>
